--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
         <input type="text" id="password" class="fadeIn third" name="login" placeholder="contraseña">
         <input type="submit" class="fadeIn fourth" value="Acceder">
         </form>
-
-        <!-- Remind Password -->
+        <!-- Registro -->
         <div id="formFooter">
-        <a class="underlineHover" href="#" onclick="alert('Contacte con el administrador por favor. Email: Wordlabras@gmail.com')">¿Contraseña olvidada?</a>
+            <a class="underlineHover" href="./HTML/registro.html">Registrarse</a>
+        </div>
+        <!-- Recordar password -->
+        <div id="formFooter">
+            <a class="underlineHover" href="#" onclick="alert('Contacte con el administrador por favor. Email: Wordlabras@gmail.com')">¿Contraseña olvidada?</a>
         </div>
 
     </div>
