--- a/HTML/wordlabras.html
+++ b/HTML/wordlabras.html
@@ -14,11 +14,11 @@
     <div class="juego">
         <!-- Header, con el menú de botones para navegar -->
         <header>
-            <button onclick="location.href = 'HTML/ayuda.html'"><img src="../IMGs/help.png" alt="ayuda"></button>
-            <h1>Wordlabras (ES)</h1>
+            <button onclick="location.href = './ayuda.html'"><img src="../IMGs/help.png" alt="ayuda"></button>
+            <div><button onclick="location.href = './wordlabras.html'"><h1>Wordlabras (ES)</h1></button></div>
             <div class="botonesDerecha">
                 <!-- <a href="HTML/stats.html"> -->
-                <button id="botonStats" class="boton" onclick="visibilizarStats()"><img src="../IMGs/stats.png" alt="estadísticas"></button>
+                <button id="botonStats" class="boton" onclick="location.href = './stats.html'"><img src="../IMGs/stats.png" alt="estadísticas"></button>
                 <!-- <a href="HTML/rank.html"> -->
                 <button id="botonRank" class="boton"><img src="../IMGs/rank.png" alt="rank"></button>
             </div>
