--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <!-- Login Form -->
-        <form>
+        <form onsubmit="event.preventDefault();">
         <input type="text" id="login" class="fadeIn second" name="login" placeholder="usuario">
         <input type="text" id="password" class="fadeIn third" name="login" placeholder="contraseña">
         <input type="submit" class="fadeIn fourth" value="Acceder">
