--- a/HTML/wordlabras.html
+++ b/HTML/wordlabras.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wordlabras - AdrianLP</title>
     <link rel="stylesheet" href="../CSS/main.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
